smaller header on mobile. Fixed zindex issue on nav on mobile homepage

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -17,6 +17,7 @@ $font-size-desktop: 14px;
 
 
 $header-height: 80px;
+$header-height-mobile: 60px;
 
 $mobile-nav-height: 66px;
 
